--- a/src/frontend/Controller.fxml
+++ b/src/frontend/Controller.fxml
@@ -16,15 +16,56 @@
       <ImageView fx:id="imageView" fitHeight="260.0" fitWidth="583.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1" />
       <ToolBar prefHeight="40.0" prefWidth="200.0">
         <items>
-          <Button mnemonicParsing="false" text="Add" />
-            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="Scale" />
-            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="Delete" />
-            <Button layoutX="100.0" layoutY="10.0" mnemonicParsing="false" text="Delete" />
-            <Button layoutX="155.0" layoutY="10.0" mnemonicParsing="false" text="RotateL" />
-            <Button layoutX="210.0" layoutY="10.0" mnemonicParsing="false" text="RotateR" />
+          <Button mnemonicParsing="false">
+               <graphic>
+                  <ImageView fx:id="addImage" fitHeight="20.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icons/Add.png" />
+                     </image></ImageView>
+               </graphic></Button>
+            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false">
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icons/Scale.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
+            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false">
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icons/MirrorV.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
+            <Button layoutX="100.0" layoutY="10.0" mnemonicParsing="false">
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icons/MirriH.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
+            <Button layoutX="155.0" layoutY="10.0" mnemonicParsing="false">
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icons/rotateR.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
+            <Button layoutX="210.0" layoutY="10.0" mnemonicParsing="false">
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icons/rotateL.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
             <Button layoutX="271.0" layoutY="10.0" mnemonicParsing="false">
                <graphic>
-                  <MenuButton mnemonicParsing="false" text="MenuButton">
+                  <MenuButton mnemonicParsing="false" text="Efeitos">
                     <items>
                       <MenuItem mnemonicParsing="false" text="EspelharV" />
                         <Menu mnemonicParsing="false" text="Editar">
