--- a/src/frontend/Controller.fxml
+++ b/src/frontend/Controller.fxml
@@ -13,8 +13,8 @@
     <RowConstraints maxHeight="400.0" minHeight="10.0" prefHeight="371.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <ImageView fx:id="imageView" fitHeight="260.0" fitWidth="583.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1" />
-      <ToolBar prefHeight="40.0" prefWidth="200.0">
+      <ImageView fx:id="imageView" fitHeight="260.0" fitWidth="583.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+      <ToolBar prefHeight="40.0" prefWidth="200.0" GridPane.valignment="TOP">
         <items>
           <Button mnemonicParsing="false">
                <graphic>
@@ -63,23 +63,20 @@
                      </image>
                   </ImageView>
                </graphic></Button>
-            <Button layoutX="271.0" layoutY="10.0" mnemonicParsing="false">
-               <graphic>
-                  <MenuButton mnemonicParsing="false" text="Efeitos">
-                    <items>
-                      <MenuItem mnemonicParsing="false" text="EspelharV" />
-                        <Menu mnemonicParsing="false" text="Editar">
-                           <items>
-                             <MenuItem mnemonicParsing="false" text="Noise" />
-                             <MenuItem mnemonicParsing="false" text="Contrast" />
-                              <MenuItem mnemonicParsing="false" text="Sepia" />
-                           </items>
-                        </Menu>
-                      <MenuItem mnemonicParsing="false" text="EspelharH" />
-                    </items>
-                  </MenuButton>
-               </graphic>
-            </Button>
+
+            <MenuButton mnemonicParsing="false" text="Efeitos">
+              <items>
+                <MenuItem mnemonicParsing="false" text="EspelharV" />
+                  <Menu mnemonicParsing="false" text="Editar">
+                     <items>
+                       <MenuItem mnemonicParsing="false" text="Noise" />
+                       <MenuItem mnemonicParsing="false" text="Contrast" />
+                        <MenuItem mnemonicParsing="false" text="Sepia" />
+                     </items>
+                  </Menu>
+                <MenuItem mnemonicParsing="false" text="EspelharH" />
+              </items>
+            </MenuButton>
         </items>
       </ToolBar>
    </children>
