--- a/src/frontend/Controller.fxml
+++ b/src/frontend/Controller.fxml
@@ -16,20 +16,9 @@
       <RowConstraints maxHeight="400.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <ImageView fx:id="setaL" fitHeight="67.0" fitWidth="50.0" onMouseClicked="#seta_L" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <GridPane.margin>
-            <Insets left="5.0" />
-         </GridPane.margin></ImageView>
-      <ImageView fx:id="imageView" fitHeight="260.0" fitWidth="583.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-         <image>
-            <Image url="@../projeto/img/pessoa.png" />
-         </image></ImageView>
-      <ImageView fx:id="setaR" fitHeight="69.0" fitWidth="50.0" onMouseClicked="#seta_R" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
-         <GridPane.margin>
-            <Insets right="5.0" />
-         </GridPane.margin>
-      </ImageView>
-      <ToolBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="TOP">
+      <ImageView fx:id="imageView" fitHeight="260.0" fitWidth="583.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+      <TextField maxWidth="200.0" text="Scale value:" visible="false" GridPane.columnSpan="2147483647" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+      <ToolBar prefHeight="40.0" prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.valignment="TOP">
          <items>
             <Button fx:id="buttonAdd" mnemonicParsing="false">
                <graphic>
@@ -78,24 +67,59 @@
                      </image>
                   </ImageView>
                </graphic></Button>
-            <MenuButton mnemonicParsing="false" text="Efeitos">
+            <MenuButton mnemonicParsing="false">
                <items>
                   <MenuItem fx:id="menuItemNoise" mnemonicParsing="false" text="Noise" />
                   <MenuItem fx:id="menuItemSepia" mnemonicParsing="false" text="Sepia" />
                   <MenuItem fx:id="menuItemContrast" mnemonicParsing="false" onAction="#contrast" text="Contrast" />
                </items>
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icons/efeitos.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </MenuButton>
+            <Button fx:id="buttonDelete" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#delete">
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icons/trash.png" />
+                     </image></ImageView>
+               </graphic>
+            </Button>
          </items>
       </ToolBar>
-      <Button fx:id="buttonCancelar" mnemonicParsing="false" onMouseClicked="#cancelar" text="Cancelar" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+      <Button fx:id="buttonCancelar" mnemonicParsing="false" onMouseClicked="#cancelar" text="Cancelar" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="BOTTOM" GridPane.vgrow="NEVER">
          <GridPane.margin>
-            <Insets right="80.0" />
+            <Insets bottom="5.0" right="80.0" />
          </GridPane.margin>
       </Button>
-      <Button fx:id="buttonGuardar" mnemonicParsing="false" onMouseClicked="#gurdar" text="Guardar" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+      <Button fx:id="buttonGuardar" mnemonicParsing="false" onMouseClicked="#guardar" text="Guardar" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
          <GridPane.margin>
-            <Insets right="10.0" />
+            <Insets bottom="5.0" right="10.0" />
          </GridPane.margin>
       </Button>
+      <Button fx:id="buttonNext" mnemonicParsing="false" onMouseClicked="#next" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+         <graphic>
+            <ImageView fitHeight="20.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@icons/arrowR.png" />
+               </image></ImageView>
+         </graphic>
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
+      </Button>
+      <Button fx:id="buttonPrevious" mnemonicParsing="false" onMouseClicked="#previous" GridPane.rowIndex="1">
+         <graphic>
+            <ImageView fitHeight="20.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@icons/arrowL.png" />
+               </image></ImageView>
+         </graphic>
+      </Button>
+      <TextField prefWidth="200.0" text="Insira o path:" visible="false" GridPane.rowIndex="1" GridPane.valignment="TOP" />
    </children>
 </GridPane>
