O DELETE TA FODIDO MAS O RESTO FUNCIONA (ABACATE)

--- a/src/frontend/Controller.fxml
+++ b/src/frontend/Controller.fxml
@@ -103,7 +103,7 @@
             </Button>
          </items>
       </ToolBar>
-      <Button fx:id="buttonCancelar" mnemonicParsing="false" onMouseClicked="#cancelar" text="Cancelar" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3" GridPane.valignment="BOTTOM" GridPane.vgrow="NEVER">
+      <Button fx:id="buttonCancelar" mnemonicParsing="false" onMouseClicked="#cancel" text="Cancelar" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3" GridPane.valignment="BOTTOM" GridPane.vgrow="NEVER">
          <GridPane.margin>
             <Insets bottom="5.0" right="80.0" />
          </GridPane.margin>
